<resources>
    <string name="app_name">Minhas Tarefas</string>
    <string name="action_settings">Settings</string>
    <string name="adicionar_tarefa">Adicionar Tarefa</string>
    <string name="tarefa">tarefa</string>
    <string name="encerra">encerra?</string>
    <string name="salvar">Salvar</string>
    <string name="atualizar_tarefa">Atualizar Tarefa</string>
    <string name="descri_o">descrição</string>
    <string name="marcar_tarefa_como_finalizada">Marcar tarefa como finalizada</string>
    <string name="atualizar">Atualizar</string>
    <string name="deletar">Deletar</string>
    <string name="finalizado">Finalizado</string>
    <string name="ok">Ok</string>
    <string name="sim">Sim</string>
    <string name="n_o">Não</string>
    <string name="tem_certeza_que_deseja_excluir">Tem certeza que deseja excluir?</string>
    <string name="tem_certeza_que_n_deseja_excluir">Tem certeza que deseja excluir?</string>
</resources>
