<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UpdateTaskActivity"
    android:background="@color/colorLight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewTarefa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/atualizar_tarefa"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />

        <EditText
            android:id="@+id/editTextTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tarefa"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descri_o"
            android:inputType="text" />

        <ImageButton
            android:id="@+id/imageButtonCalendar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/ic_launcher_logo"
            android:background="@color/colorLight"/>

        <TextView
            android:id="@+id/textViewFinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Encerra?" />

        <CheckBox
            android:id="@+id/checkBoxFinished"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/marcar_tarefa_como_finalizada" />

        <Button
            android:id="@+id/button_update"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/botao_add_save"
            android:text="@string/atualizar"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/colorLight" />


        <Button
            android:id="@+id/button_delete"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/botao_deletar"
            android:text="@string/deletar"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/colorLight" />


    </LinearLayout>


</RelativeLayout>