<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddTaskActivity"
    android:background="@color/colorLight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewAdicionarTarefa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/adicionar_tarefa"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tarefa"
            android:inputType="textFilter|text|textPhonetic|textCapSentences" />

        <EditText
            android:id="@+id/editTextDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descri_o"
            android:inputType="text|textCapSentences" />

        <ImageButton
            android:id="@+id/imageButtonCalendar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorLight"
            app:srcCompat="@mipmap/ic_launcher_calendar" />

        <TextView
            android:id="@+id/textViewFinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Encerra?" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/botao_add_save"
            android:text="@string/salvar"
            android:textAllCaps="false"
            android:textColor="@color/colorLight"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>